src/objects/Loan_account_Due_Details__c.object
<CustomObject>
    <description>Due Details for customer loan accounts.</description>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <formula>Due_Amt__c -  Payment_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Amount</description>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Due date of the due.</description>
        <inlineHelpText>Due Date of the Due</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Type_Description__c</fullName>
        <description>Description of Due, to be shown on UI</description>
        <label>Due Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Type__c</fullName>
        <description>Due Type Id</description>
        <label>Due Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Charge Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Dues Details</relationshipLabel>
        <relationshipName>Dues_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Payment Amount.</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>Payment Date.</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <label>Dues Details</label>
    <nameField>
        <displayFormat>PCN-{0000000000}</displayFormat>
        <label>Due Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dues Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>